--- a/server/erb/candlepin.conf.erb
+++ b/server/erb/candlepin.conf.erb
@@ -40,6 +40,8 @@ candlepin.hidden_resources=<%= hidden_resources %>
 #log4j.logger.org.candlepin=DEBUG
 
 candlepin.pinsetter.enable=<%= pinsetter_enabled || true %>
+candlepin.ca_key_password=password
+
 org.quartz.jobStore.misfireThreshold=60000
 org.quartz.jobStore.useProperties=false
 org.quartz.jobStore.dataSource=myDS
