--- a/gutterball/gutterball.spec.tmpl
+++ b/gutterball/gutterball.spec.tmpl
@@ -48,16 +48,16 @@ engine.
 rm -rf %{buildroot}
 
 ## Conf files
-install -d -m 755 %{buildroot}/%{_sysconfdir}/%{name}/certs/amqp
-install -m 640 conf/%{name}.conf %{buildroot}/%{_sysconfdir}/%{name}/%{name}.conf
+%{__install} -d -m 755 %{buildroot}/%{_sysconfdir}/%{name}/certs/amqp
+%{__install} -m 640 conf/%{name}.conf %{buildroot}/%{_sysconfdir}/%{name}/%{name}.conf
 
 ## Logging
-install -d -m 755 %{buildroot}/%{_localstatedir}/log/%{name}
-install -d 755 %{buildroot}%{_sysconfdir}/logrotate.d/
-install -m 644 conf/logrotate.conf %{buildroot}%{_sysconfdir}/logrotate.d/%{name}
+%{__install} -d -m 755 %{buildroot}/%{_localstatedir}/log/%{name}
+%{__install} -d 755 %{buildroot}%{_sysconfdir}/logrotate.d/
+%{__install} -m 644 conf/logrotate.conf %{buildroot}%{_sysconfdir}/logrotate.d/%{name}
 
 ## War file
-install -d -m 755 %{buildroot}/%{_sharedstatedir}/%{tomcat}/webapps/%{name}
+%{__install} -d -m 755 %{buildroot}/%{_sharedstatedir}/%{tomcat}/webapps/%{name}
 %{__unzip} %{SOURCE1} -d %{buildroot}/%{_sharedstatedir}/%{tomcat}/webapps/%{name}
 
 %clean
