Remove variable from common spec project name.
This is not expandible by tito and doesn't look used for much.

--- a/common/candlepin-common.spec.tmpl
+++ b/common/candlepin-common.spec.tmpl
@@ -9,9 +9,7 @@
 ## GCJ-compiled .jar.so files.
 %global __jar_repack %{nil}
 
-%global parent_proj candlepin
-
-Name: %{parent_proj}-common
+Name: candlepin-common
 Version: 1.0.23
 Release: 1%{?dist}
 #if $epoch
