--- a/gutterball/gutterball.spec.tmpl
+++ b/gutterball/gutterball.spec.tmpl
@@ -25,7 +25,7 @@ Summary: Data aggregator for Candlepin
 
 License: GPLv2
 URL: http://www.candlepinproject.org
-Source0: %{name}-%{version}-project.tar.gz
+Source0: %{name}-%{version}-complete.tar.gz
 Source1: %{name}-%{version}.war
 
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
