--- a/server/candlepin.spec.tmpl
+++ b/server/candlepin.spec.tmpl
@@ -30,7 +30,7 @@ Summary: Candlepin is an open source entitlement management system
 Group: System Environment/Daemons
 URL: http://www.candlepinproject.org
 License: GPLv2
-Source0: %{name}-%{version}-project.tar.gz
+Source0: %{name}-%{version}-complete.tar.gz
 Source1: %{name}-%{version}.war
 
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
