--- a/common/candlepin-common.spec.tmpl
+++ b/common/candlepin-common.spec.tmpl
@@ -21,7 +21,7 @@ Summary: Common code for Candlepin and related projects
 
 URL: http://www.candlepinproject.org
 License: GPLv2
-Source0: %{name}-%{version}-project.tar.gz
+Source0: %{name}-%{version}-complete.tar.gz
 Source1: %{name}-%{version}.jar
 
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
