--- a/server/candlepin.spec.tmpl
+++ b/server/candlepin.spec.tmpl
@@ -33,6 +33,11 @@ License: GPLv2
 Source0: %{name}-%{version}-complete.tar.gz
 Source1: %{name}-%{version}.war
 
+Obsoletes: candlepin-tomcat
+Obsoletes: candlepin-tomcat6
+Obsoletes: candlepin-devel
+Obsoletes: candlepin-certgen-lib
+
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
 BuildArch: noarch
 
