--- a/server/erb/candlepin.conf.erb
+++ b/server/erb/candlepin.conf.erb
@@ -9,6 +9,8 @@ else
   _.driver_class = driver_class || profile.driver_class
   _.jdbc_url = jdbc_url || profile.jdbc_url
 end
+
+_.jdbc_url.gsub!('$DB_NAME', ENV['app_db_name'])
 -%>
 <%- if ENV['logdriver'] -%>
 log4j.logger.net.rkbloom.logdriver.LogPreparedStatement=DEBUG
